--- a/basic-rest-api/package.json
+++ b/basic-rest-api/package.json
@@ -1,7 +1,6 @@
 {
   "name": "basic-rest-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,8 +10,9 @@
   "author": "elcon",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
     "sqlite3": "^5.0.2"
-  }
+  },
+  "description": ""
 }
